2005-12-03  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/driver.c (start_some_dumps): Don't test for
	  cur_idle == NOT_IDLE.

2005-12-03  Jean-Louis Martineau <martineau@zmanda.com>

	* server-src/driverio.c (check_unfree_serial): New fonction to check
	  unfreed serial number.
	* server-src/driverio.c (free_serial_dp): Set stable[s].dp to NULL.
	* server-src/driverio.h (check_unfree_serial): Prototype.
	* server-src/driver.c (main): Call check_unfree_serial.

2005-12-02  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Franz Fischer

	* config/acinclude.m4i: Fix for __alpha.

2005-12-02  Jean-Louis Martineau <martineau@zmanda.com>

	* common-src/util.c: Debug must end with '\n'.

2005-12-01  Jean-Louis Martineau <martineau@zmanda.com>

	* configure.in: Amanda support x86_64-unknown-linux-gnu.

2005-11-30  Jean-Louis Martineau <martineau@zmanda.com>

        * common-src/rsh-security.c (rsh_sendpkt): buf is a char array.
        * common-src/ssh-security.c (rsh_sendpkt): buf is a char array.
	* config/acinclude.m4i (AX_CREATE_STDINT_H): Newer macro.

2005-11-30  Jean-Louis Martineau <martineau@zmanda.com>

	* client-src/rundump.c: undef USE_RUNDUMP before define.

2005-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Franz Fischer

	* client-src/amqde.c: Fix compiler warning.

2005-11-30  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Franz Fischer

	* common-src/event.h: Fix compiler warning.
	* server-src/conffile.h: Fix compiler warning.

2005-11-29  Jean-Louis Martineau <martineau@zmanda.com>

	* config/libtool.m4i: libtool 1.5.20
	* config/ltmain.sh: libtool 1.5.20

2005-11-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Franz Fischer

	* common-src/fileheader.c (build_header): Declation before instruction.
	* restore-src/amfetchdump.c: Don't use C++ style comment.
	* restore-src/restore.c: Don't use C++ style comment.
	* server-src/amindexd.c (reply, lreply, fast_lreply): buf must be
	   dynamicaly allocated.